--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-white dark:bg-[#0f0f11];
+body,
+html {
+  @apply bg-white dark:bg-[#0f0f11] overflow-x-hidden;
+  width: 100vw;
+  max-width: 100vw;
+}
+
+.gradient-title {
+  @apply bg-gradient-to-b from-amber-500 to-teal-400 font-bold text-transparent bg-clip-text pb-1 pr-2;
 }
