--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 body,
 html {
-  @apply bg-white dark:bg-[#0f0f11] overflow-x-hidden;
+  @apply bg-[#0d1117] dark:bg-[#0f0f11] overflow-x-hidden;
+  
   width: 100vw;
   max-width: 100vw;
 }
