--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,13 @@
 body,
 html {
   @apply bg-[#0d1117] dark:bg-[#0f0f11] overflow-x-hidden;
-  
+
   width: 100vw;
   max-width: 100vw;
 }
 
 .gradient-title {
-  @apply bg-gradient-to-b from-amber-500 to-teal-400 font-bold text-transparent bg-clip-text pb-1 pr-2;
+  @apply bg-gradient-to-b from-white to-teal-300 font-bold text-transparent bg-clip-text pb-1 pr-2;
 }
 @keyframes gradient-spin {
   0% {
